@@ -44,3 +44,4 @@
 * fix frost indicator
 * 1 hour past weather observation types
 * changed erroneous readings check and moved it to a separate function
+* intermittent precipitation
